fixed overlapping text bug and made "logo" a link
made the NJ FloodNet logo a link to get back to the map page from sign in and fixed the text overlapping at the bottom of the page

--- a/CS_546_NJFloodNet/public/css/styles.css
+++ b/CS_546_NJFloodNet/public/css/styles.css
@@ -47,6 +47,16 @@ body {
     color: #c2d2da;
 }
 
+.logo a {
+    text-decoration: none;
+    color: inherit;
+  }
+
+.logo a:hover {
+    text-decoration: underline;
+    color: #c2d2da;
+}
+
 .user-action {
     font-size: 16px;
 }
@@ -141,6 +151,13 @@ footer {
     left: 10px;
     margin: 0;
     text-align: right;
+}
+
+@media (max-width: 675px) {
+    .footer-rights,
+    .footer-class {
+        display: none; /* Hide these elements */
+    }
 }
 
 /* map styles */
